# cmake_tutorial

./: README.md
0x00-cmake/: CMakeLists.txt  README.md  generate.sh  main.cpp
0x01-cmake/: README.md
0x02-cmake/: CMakeLists.txt  README.md  main.cpp
0x02-cmake/inc/: string_operations.h
0x02-cmake/src/: string_operations.cpp
0x03-cmake/: README.md
0x04-cmake/: README.md
0x04-cmake/example1/: CMakeLists.txt  README.md
0x04-cmake/example2/: CMakeLists.txt  README.md  main.cpp
0x04-cmake/example2/logger/src/: log.cpp
0x04-cmake/example2/src/: operations.cpp
0x05-cmake/: CMakeLists.txt  README.md  build-example.md
0x05-cmake/src/: main.cpp
0x05-cmake/src/maths/include/: supermath.h
0x06-cmake/: README.md
0x06-cmake/1-example/: CMakeLists.txt
0x06-cmake/1-example/src/maths/: maths.cmake
0x06-cmake/1-example/src/stats/: stats.cmake  stats.cpp
0x06-cmake/2-example/: CMakeLists.txt
0x06-cmake/2-example/src/maths/: CMakeLists.txt  supermath.cpp
0x06-cmake/2-example/src/stats/: CMakeLists.txt
0x06-cmake/2-example/src/stats/include/: stats.h
0x07-cmake/: 1-message.cmake  2-variables.cmake  README.md
0x08-cmake/: README.md  list_option.cmake
0x09-cmake/: CMakeLists.txt  README.md  if-else.cmake
0x0A-cmake/: README.md  loops.cmake
0x0B-cmake/: README.md  functions.cmake
0x0C-cmake/: README.md  macro.cmake
0x0D-clang_format/: .clang-format  example.cpp  example.h  main.cpp
0x0E-cmake/: CMakeLists.txt  README.md  person.h
0x0E-cmake/cmake/: ClangFormat.cmake
0x0F-cmake/: README.md
0x10-cmake/: README.md
0x10-cmake/cmake/: AddGoogleTest.cmake
0x10-cmake/test/: CMakeLists.txt  test_calc.cpp
0x11-cmake/: CMakeLists.txt  README.md  main.cpp
0x11-cmake/src/: calculator.cpp
0x11-cmake/test/: CMakeLists.txt  test_calc.cpp
0x12-cmake_test_main/: CMakeLists.txt  README.md  main.cpp
0x12-cmake_test_main/src/: run_app.cpp
0x12-cmake_test_main/test/: CMakeLists.txt  test_run_app.cpp
0x13-cmake_doxygen/: README.md
0x13-cmake_doxygen/src/: calculator.h  run_app.cpp
0x13-cmake_doxygen/test/: CMakeLists.txt
0x14-cmake_doxygen/: README.md
0x14-cmake_doxygen/docs/: CMakeLists.txt
0x14-cmake_doxygen/src/: calculator.cpp
0x14-cmake_doxygen/test/: test_run_app.cpp
